force-app/main/default/objects/FEC_Integration_Case__c/FEC_Integration_Case__c.object-meta.xml
<CustomObject>
    <description>Using for Integration case</description>
    <label>FEC Integration Case</label>
    <nameField>
        <label>FEC Integration_Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEC Integration Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>