force-app/main/default/objects/FEC_Integration_Case__c/fields/CaseID__c.field-meta.xml
<CustomField>
    <fullName>CaseID__c</fullName>
    <label>CaseID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>