force-app/main/default/objects/FEC_Integration_Case__c/fields/FEC_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Status__c</fullName>
    <label>Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>