force-app/main/default/objects/FEC_Integration_Case__c/fields/FEC_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Type__c</fullName>
    <label>Case Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>