force-app/main/default/objects/FEC_Integration_Case__c/fields/FEC_CaseID__c.field-meta.xml
<CustomField>
    <fullName>FEC_CaseID__c</fullName>
    <label>CaseID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>