force-app/main/default/objects/FEC_Integration_Case__c/fields/FEC_Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Channel_Name__c</fullName>
    <label>Channel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>