force-app/main/default/objects/FEC_Integration_Case__c/fields/FEC_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>FEC_Created_Time__c</fullName>
    <label>Created Time</label>
    <type>DateTime</type>
</CustomField>