force-app/main/default/objects/FEC_Integration_Case__c/fields/FEC_Creator_Email__c.field-meta.xml
<CustomField>
    <fullName>FEC_Creator_Email__c</fullName>
    <label>Creator Email</label>
    <type>Email</type>
</CustomField>