force-app/main/default/objects/FEC_Integration_Case__c/fields/FEC_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>