force-app/main/default/objects/FEC_Integration_Case__c/fields/FEC_Field_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Field_Object_Name__c</fullName>
    <label>Field Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>