force-app/main/default/objects/FEC_Integration_Case__c/fields/FEC_Integrate_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Integrate_Case_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FEC Integrate Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>FEC Integration Cases</relationshipLabel>
    <relationshipName>FEC_Integration_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>