force-app/main/default/objects/FEC_Integration_Case__c/fields/FEC_Investigation_Conclusion__c.field-meta.xml
<CustomField>
    <fullName>FEC_Investigation_Conclusion__c</fullName>
    <label>Investigation Conclusion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>