force-app/main/default/objects/FEC_Integration_Case__c/fields/FEC_Nature_Of_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>FEC_Nature_Of_Case_Id__c</fullName>
    <label>Nature Of Case Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>