force-app/main/default/objects/FEC_Integration_Case__c/fields/FEC_Parent_CaseID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Parent_CaseID__c</fullName>
    <label>Parent CaseID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>