force-app/main/default/objects/FEC_Integration_Case__c/fields/FEC_Remark__c.field-meta.xml
<CustomField>
    <fullName>FEC_Remark__c</fullName>
    <label>Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>