force-app/main/default/objects/FEC_Integration_Case__c/fields/FEC_Service_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Service_Case_ID__c</fullName>
    <label>Service Case ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>