force-app/main/default/objects/FEC_Integration_Case__c/fields/FEC_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sub_Category__c</fullName>
    <label>Sub Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>