force-app/main/default/objects/FEC_Integration_Case__c/fields/FEC_Sub_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sub_Code__c</fullName>
    <label>Sub Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>