force-app/main/default/objects/FEC_Integration_Case__c/fields/FEC_Sys_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sys_Channel__c</fullName>
    <label>Sys Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>