force-app/main/default/objects/FEC_Integration_Case__c/fields/FEC_Sys_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sys_Date_Time__c</fullName>
    <label>Sys Date Time</label>
    <type>DateTime</type>
</CustomField>