force-app/main/default/objects/FEC_Integration_Case__c/fields/FEC_Sys_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sys_Transaction_Id__c</fullName>
    <label>Sys Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>